# pick_cube_rb3

./: LICENSE  README.md  camera.py  control.py  logic.py  vision.py
jetson_nano/: README.md  package.xml  setup.cfg  setup.py
jetson_nano/rb3_nano_comm/: .nano_subscriber.py.swo
jetson_nano/src/rb3_nano_comm/rb3_nano_comm/: nano_subscriber.py
rb3/: README.md  README.txt  run_camera_node.sh  run_detection_node.sh  run_logic_comm.sh
rb3/src/camera_node/: package.xml  setup.py
rb3/src/camera_node/camera_node/: image_publisher_node.py
rb3/src/detection_node/: package.xml  setup.py
rb3/src/detection_node/detection_node/: detection_subscriber_node.py
rb3/src/detection_node/share/resource/data/: yolov4-tiny.cfg
rb3/src/rb3_nano_comm/: package.xml  setup.cfg
rb3/src/rb3_nano_comm/rb3_nano_comm/: rb3_publisher.py
